kubernetes/apps/docs/docs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
  labels:
    app: docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: docs
